# EasyRLWE

./: CMakeLists.txt  README.md
include/: common.h  lwe.h  ntt.h  random_base.h  samples.h  utils.h  vector_ops.h
test/: CMakeLists.txt  main_test.cpp
test/include/: common_test.h  parameters.h  sample_test.h  test_utils.h
test/src/: common_test.cpp  main_test.cpp  sample_test.cpp
